--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,54 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.header-btn{
+  width: fit-content;
+}
+
+.header-btn::after{
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+  content: "";
+  display: block;
+  border-radius: 9999px;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform .2s ease-in-out;
+}
+
+.header-btn:hover::after{
+  transform: scaleX(1);
+  transform-origin: left;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  --sb-track-color: #ffffff;
+  --sb-thumb-color: #000000;
+  @apply text-text dark:text-darkText;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+body::-webkit-scrollbar {
+  width: 16px;
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  body {
+    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
   }
 }
